--- a/index/index.html
+++ b/index/index.html
@@ -38,7 +38,7 @@
         <li><a href="https://vk.com/id446537464">Моя страница VK</a></li>
         <li><a href="https://t.me/Mariya_Miroshnik">Мой телеграм</a></li>
     </ul>
-    <img src="/LR1/image/lisa.jpg" alt="Здесь должны быть две лисички" width="600" height="839" />
+    <img src="../image/lisa.jpg" alt="Здесь должны быть две лисички" width="600" height="839" />
 
     <h2>Бонус - милое стихотворение</h2>
     <h3>Ольга Фокина, Усть-Илимск</h3>
