--- a/index.html
+++ b/index.html
@@ -4,46 +4,57 @@
 <head>
     <meta charset="utf-8" />
     <title>Лабораторная работа №1 - Мирошник М. Л.</title>
+    <link rel="stylesheet" href="css/styleSheet.css" />
 </head>
-<body style="background-color: #b9e7c8">
-    <h1>Это моя первая HTML-страница</h1>
-    <h1>О себе</h1>
-    <p>
-        Мирошник Мария Леонидовна - 6201-020302D. Родилась в <b>г. Самара</b>, 24.12.2004. <br />
-        Увлекаюсь <i>рисованием, писательством, программированием, <del>кулинарией</del>.</i>
-    </p>
+<body>
+    <!--style="background-color: #b9e7c8"-->
 
-    <h2>Какие фильмы мне нравятся</h2>
-    <ul>
-        <li>Джентельмены</li>
-        <li>Притворись моей женой</li>
-        <li>Гордость и предубеждение</li>
-        <li>Один дома</li>
-        <li>Камаз</li>
-        <li>Записки Джульетты</li>
-    </ul>
-    <h2>Какая музыка мне нравится</h2>
-    <p><i>Я не помню жанры, простите.</i></p>
-    <ol>
-        <li>Djinotan</li>
-        <li>XOLIDAYBOY</li>
-        <li>Ilya Polyakov</li>
-        <li>Lana Del Rey</li>
-        <li>Green Apelsin</li>
-        <li>Melanie Martinez</li>
-    </ol>
+    <h1 id="titleText">Это моя первая HTML-страница</h1>
+    <div class="content">
+        <div class="content-left">
+            <h1>О себе</h1>
+            <p>
+                Мирошник Мария Леонидовна - 6201-020302D. Родилась в <b>г. Самара</b>, 24.12.2004. <br />
+                Увлекаюсь <i>рисованием, писательством, программированием, <del>кулинарией</del>.</i>
+            </p>
 
-    <h2>Как связаться со мной</h2>
-    <ul>
-        <li><a href="https://vk.com/id446537464">Моя страница VK</a></li>
-        <li><a href="https://t.me/Mariya_Miroshnik">Мой телеграм</a></li>
-    </ul>
-    <img src="image/lisa.jpg" alt="Здесь должны быть две лисички" width="600" height="839" />
+            <h2>Какие фильмы мне нравятся</h2>
+            <ul>
+                <li>Джентельмены</li>
+                <li>Притворись моей женой</li>
+                <li>Гордость и предубеждение</li>
+                <li>Один дома</li>
+                <li>Камаз</li>
+                <li>Записки Джульетты</li>
+            </ul>
+            <h2>Какая музыка мне нравится</h2>
+            <p><i>Я не помню жанры, простите.</i></p>
+            <ol>
+                <li>Djinotan</li>
+                <li>XOLIDAYBOY</li>
+                <li>Ilya Polyakov</li>
+                <li>Lana Del Rey</li>
+                <li>Green Apelsin</li>
+                <li>Melanie Martinez</li>
+            </ol>
 
-    <h2>Бонус - милое стихотворение</h2>
-    <h3>Ольга Фокина, Усть-Илимск</h3>
-    <h3>НЕСУ ДОБРО В ЛАДОШКАХ!</h3>
-    <pre style="font-size: 20px">Несу добро в ладошках,
+            <h2>Как связаться со мной</h2>
+            <ul>
+                <li><a href="https://vk.com/id446537464">Моя страница VK</a></li>
+                <li><a href="https://t.me/Mariya_Miroshnik">Мой телеграм</a></li>
+            </ul>
+        </div>
+
+        <div class="content-right">
+            <img src="image/lisa.jpg" alt="Здесь должны быть две лисички" class="img"/>
+        </div>
+    </div>
+    <div class="poem">
+        <h1>Бонус - милое стихотворение</h1>
+        <h3>Ольга Фокина, Усть-Илимск</h3>
+        <h3>НЕСУ ДОБРО В ЛАДОШКАХ!</h3>
+    </div>
+        <pre style="font-size: 20px">Несу добро в ладошках,
 Да чтоб не расплескать.
 Хочу его немножко
 Да каждому отдать.
