--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <!--style="background-color: #b9e7c8"-->
 
     <h1 id="titleText">Это моя первая HTML-страница</h1>
+
+    <div class="header">
+        <h2>Оглавление</h2>
+        <a href="index.html">Основная страница</a>
+        <a href="page2.html">Позиционирование элементов</a>
+    </div>
+    
+
     <div class="content">
         <div class="content-left">
             <h1>О себе</h1>
