--- a/page2.html
+++ b/page2.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="ru" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title>Позиционирование элементов</title>
@@ -11,6 +11,7 @@
         <h2>Оглавление</h2>
         <a href="index.html">Основная страница</a>
         <a href="page2.html">Позиционирование элементов</a>
+        <a href="table.html">Таблица</a>
     </div>
 
     <h1 class="label">Горизонтальное позиционирование</h1>
