--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h2>Оглавление</h2>
         <a href="index.html">Основная страница</a>
         <a href="page2.html">Позиционирование элементов</a>
+        <a href="table.html">Таблица</a>
     </div>
     
 
