--- a/table.html
+++ b/table.html
@@ -98,6 +98,41 @@
         </tr>
     </table>
 
+    <p class="labelForm">Введите данные о студенте</p>
+    <form>
+        <!--<form action="file.php">-->
+        <input type="text" id="ID" name="id" placeholder="Введите данные">
+        <label for="ID">ID</label><br>
+
+        <input type="text" id="fullName" name="fullName" placeholder="Введите данные">
+        <label for="fullName">ФИО</label><br>
+
+        <input type="text" id="docNum" name="docNum" placeholder="Введите данные">
+        <label for="docNum">Номер зачётной книжки</label><br>
+
+        <input type="text" id="groupNum" name="fullName" placeholder="Введите данные">
+        <label for="groupNum">Номер группы</label><br>
+
+        <input type="text" id="old" name="old" placeholder="Введите данные">
+        <label for="old">Возраст</label><br>
+
+        <input type="text" id="typeStudy" name="typeStudy" placeholder="Введите данные">
+        <label for="typeStudy">Форма поступления</label><br>
+
+        <input type="text" id="faculty" name="faculty" placeholder="Введите данные">
+        <label for="faculty">Название направления</label><br>
+
+
+        <p style="color: black">Пол</p>
+        <input type="radio" id="genderFemale" name="gender">
+        <label for="genderFemale">Женский</label>
+
+        <input type="radio" id="genderMale" name="gender">
+        <label for="genderMale">Мужской</label><br>
+
+        <input type="submit" value="Отправить" style="background-color:#f3bd72">
+    </form>
+
 </body>
 
 </html>
