--- a/table.html
+++ b/table.html
@@ -113,7 +113,7 @@
         <input type="text" id="groupNum" name="fullName" placeholder="Введите данные">
         <label for="groupNum">Номер группы</label><br>
 
-        <input type="text" id="old" name="old" placeholder="Введите данные">
+        <input type="number" id="old" name="old" placeholder="Введите данные">
         <label for="old">Возраст</label><br>
 
         <input type="text" id="typeStudy" name="typeStudy" placeholder="Введите данные">
